[swagger] Add: resetPassword
